--- a/cSarpProject/appsettings.json
+++ b/cSarpProject/appsettings.json
@@ -1,4 +1,16 @@
 ﻿{
+  
+  "ConnectionStrings": {
+    //[Workplace]
+    "DefaultConnection": "Data Source= /opt/mssql-tools/bin/sqlcmd -S localhost -U SA -P '<Passw0rd>' "
+                                      ///opt/mssql-tools/bin/sqlcmd -S localhost -U SA -P '<Passw0rd>'
+    ///
+
+    //[Laptop]
+    // "DefaultConnection": "Data Source=RIAZ\\SQLEXPRESS01;Initial Catalog=OurEduDb;User ID=rana; Password=abc"
+  },
+
+
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
