Insert and view completed

--- a/cSarpProject/appsettings.json
+++ b/cSarpProject/appsettings.json
@@ -2,8 +2,51 @@
   
   "ConnectionStrings": {
     //[Workplace]
-    "DefaultConnection": "server = localhost; Initial Catalog=TutorialDB;User ID=sa; Password=Passw0rd"
+    //http://insidemysql.com/getting-started-with-asp-net-core-and-mysql-connectornet/
+    //final
+
+    //"DefaultConnection": "Data Source=172.17.0.2,1433;Initial Catalog=TutorialDB;User ID=sa; Password=Passw0rd"
+    //Data Source= bed19b264098\\mssql-server-linux;
+
+    "DefaultConnection": "server = localhost; Initial Catalog=TestDb;User ID=sa; Password=Passw0rd"
+    //server = 172.17.0.2,1433, database= TutorialDB; user=sa;password=Passw0rd
+    //Data Source=RIAZ\\SQLEXPRESS01;Initial Catalog=OurEduDb;User ID=rana; Password=abc
+    //User ID=sa;Password=Passw0rd;Server=localhost;Port=1433;Database=TutorialDB;Integrated Security=true;Pooling=true;
+    //bed19b264098 /opt/mssql-tools/bin/sqlcmd -S localhost -U SA -P '<Passw0rd>'
+    //const string connectionString = @"Server=hostname\sqlexpress;Database=DEVDB;User Id=sa;Password=password;";
+    //[Laptop]
+
+    // "DefaultConnection": "Data Source=RIAZ\\SQLEXPRESS01;Initial Catalog=OurEduDb;User ID=rana; Password=abc"
+    //localhost\SQLexpress
+  
+  
   },
+
+  /****
+  "ConnectionStrings": {  
+"DefaultConnection": "Server=sqlinux;User Id=SA;Password=Br0ckLesnar!;Database=ApplicationDb;Trusted_Connection=False;"  
+},
+
+  **/
+
+  /***
+
+  {
+  https://docs.microsoft.com/en-us/aspnet/core/fundamentals/configuration
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CustomConfigurationProvider;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "key1": "value_from_json_1",
+  "key2": "value_from_json_2",
+  "key3": "value_from_json_3"
+}
+
+  **/
+
+  //"myDatabase": "Server=(localdb)\\ProjectsV12;Database=myData;..."
+  //connectionString="Server=(localdb)\mssqllocaldb;Database=Blogging;Trusted_Connection=True;" />
+  
 
 
   "Logging": {
